# kestra_enterprise_resources

./: .gitignore  README.md  application.yaml  cleanup.sh  docker-compose.yml  env.example  generate-tf-vars.sh
demo/: README.md  seed_demo_data.sql
demo/ftp-ui/: app.py
demo/local_api/: README.md  main.py
local_api/: README.md  __init__.py  pyproject.toml
resources/apps/: acme_agent.yaml  bug_report.yaml  customer_onboarding.yaml  email_campaign.yaml  employee_onboarding.yaml  extract_weather.yaml  invoice_processing.yaml  kestra_agent.yaml  order_fulfillment.yaml
resources/dashboards/: execution_state.yaml
resources/flows/: acme_agent.yaml  bug_report_processor.yaml  child.yaml  create_bucket_email.yaml  customer_onboarding.yaml  data_pipeline_assets.yaml  data_pipeline_assets_sqlite.yaml  email_campaign_trigger.yaml  employee_onboarding.yaml  exercice1.yaml  exercice2_parent.yaml  extract-all.yaml  extract.yaml  feature_feedback_aggregator.yaml  generate_assets.yaml  gmail_processing.yaml  hello-world.yaml  infra_assets.yaml  inventory_check.yaml  invoice_processing.yaml  kestra_agent.yaml  local_etl.yaml  log_staging_layer_assets.yaml  monthly_sales_report.yaml  order_fulfillment.yaml  parent.yaml  payroll_notification.yaml  pipeline_with_assets.yaml  quarterly_financial_report.yaml  release_notification.yaml  script_task_with_assets.yaml  ship_asset.yaml  (+5 more)
scripts/: install-flow-plugins.sh
terraform/: apps.tf  dashboards.tf  iam.tf  kv.tf  main.tf  namespace.tf  namespace_files.tf  secrets.tf  service_account.tf  tenants.tf  tests.tf  variables.tf
(+1 files in other folders)
